# light

./: .clang-format  .clang-tidy  .cmake-format.yaml  .drone.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  Test.Mirror  conanfile.py  default_gui_layout.ini
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt
modules/app/include/app/: entrypoint.hpp  layer.hpp
modules/app/src/: application.cpp  layer.cpp  layer_stack.cpp
modules/asset_baker/: CMakeLists.txt
modules/asset_baker/include/asset_baker/: bakers.hpp
modules/asset_baker/src/: baker.cpp
modules/asset_manager/: CMakeLists.txt
modules/asset_manager/include/asset_manager/: asset_manager.hpp
modules/asset_manager/src/: asset_manager.cpp
modules/asset_parser/: CMakeLists.txt
modules/asset_parser/include/asset_parser/: parser.hpp
modules/asset_parser/include/asset_parser/assets/: text.hpp  texture.hpp
modules/asset_parser/include/compressors/: compressors.hpp
modules/asset_parser/src/: parser.cpp
modules/asset_parser/src/assets/: text.cpp  texture.cpp
modules/base/: CMakeLists.txt
modules/base/include/base/: base.hpp
modules/base/include/base/portables/: debug_trap.hpp
modules/base/src/: pch.hpp
modules/camera/: CMakeLists.txt
modules/camera/include/camera/: camera.hpp  component.hpp  ortho.hpp  scene.hpp
modules/camera/src/: camera.cpp  ortho.cpp  scene.cpp
modules/debug/: CMakeLists.txt
modules/debug/include/debug/: assertions.hpp  instrumentor.hpp
modules/debug/include/ltdebug/: assertions.hpp
modules/debug/src/: instrumentor.cpp  pch.hpp
modules/ecs/: CMakeLists.txt
modules/ecs/include/ecs/: components.hpp  entity.hpp  scene.hpp  serializer.hpp  uuid.hpp
modules/ecs/include/ecs/components/: native_script.hpp  scriptable_entity.hpp  sprite_renderer.hpp  tag.hpp  transform.hpp  uuid.hpp
modules/ecs/private/: sparse_set.hpp
modules/ecs/src/: entity.cpp  scene.cpp  serializer.cpp  uuid.cpp
modules/engine/: CMakeLists.txt  rename.py
modules/engine/include/engine/: engine.hpp
modules/engine/include/engine/base/: base.hpp  entrypoint.hpp
modules/engine/include/engine/camera/: camera.hpp  ortho.hpp  scene.hpp
modules/engine/include/engine/core/: application.hpp  entrypoint.hpp  uuid.hpp  window.hpp
modules/engine/include/engine/debug/: exceptions.hpp  instrumentor.hpp  logger.hpp
modules/engine/include/engine/events/: char.hpp  event.hpp  keyboard.hpp  mouse.hpp  window.hpp
modules/engine/include/engine/graphics/: blender.hpp  buffers.hpp  framebuffer.hpp  graphics_context.hpp  render_command.hpp  renderer.hpp  shader.hpp  shared_context.hpp  texture.hpp  vertex_layout.hpp
modules/engine/include/engine/input/: input.hpp  key_codes.hpp  mouse_codes.hpp
modules/engine/include/engine/layer/: layer.hpp  layer_stack.hpp
modules/engine/include/engine/math/: random.hpp
modules/engine/include/engine/scene/: components.hpp  entity.hpp  scene.hpp
modules/engine/include/engine/time/: timer.hpp
modules/engine/include/engine/user_interface/: user_interface.hpp
modules/engine/include/engine/utils/: file_manager.hpp  resource_manager.hpp  (+2 more)
modules/engine/private/: entrypoint.cpp
modules/engine/src/: ltpch.hpp
modules/engine/src/camera/: camera.cpp  ortho.cpp  scene.cpp
modules/engine/src/core/: application.cpp  uuid.cpp
modules/engine/src/debug/: exceptions.cpp  instrumentor.cpp  logger.cpp
modules/engine/src/graphics/: blender.cpp  buffers.cpp  framebuffer.cpp  graphics_context.cpp  render_command.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_layout.cpp
modules/engine/src/input/: input.cpp
modules/engine/src/layer/: layer.cpp  layer_stack.cpp
modules/engine/src/math/: random.cpp
modules/engine/src/scene/: entity.cpp  scene.cpp
modules/engine/src/time/: timer.cpp
modules/engine/src/user_interface/: user_interface.cpp
modules/engine/src/utils/: file_manager.cpp  resource_manager.cpp  serializer.cpp  stringifier.cpp
modules/input/: CMakeLists.txt
modules/input/include/input/: input.hpp  key_codes.hpp  mouse_codes.hpp
modules/input/src/: input.cpp
modules/light/: CMakeLists.txt
modules/light/src/: entrypoint.cpp
modules/logger/: CMakeLists.txt
modules/logger/include/logger/: logger.hpp
modules/logger/src/: logger.cpp
modules/mirror/: CMakeLists.txt
modules/mirror/include/mirror/: editor_layer.hpp
modules/mirror/src/: editor_layer.cpp  mirror.cpp
modules/mirror/src/panel/: asset_browser.cpp  properties.cpp  scene_hierarchy.cpp
modules/pch/: CMakeLists.txt
modules/pch/public/pch/: pch.hpp
modules/renderer/: CMakeLists.txt
modules/renderer/include/renderer/: blender.hpp  buffers.hpp  framebuffer.hpp  graphics_context.hpp  render_command.hpp  renderer.hpp  shader.hpp  shared_context.hpp  texture.hpp  vertex_layout.hpp
modules/renderer/src/: blender.cpp  buffers.cpp  framebuffer.cpp  graphics_context.cpp  render_command.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_layout.cpp
modules/renderer/src/dx/: blender.cpp  buffers.cpp  framebuffers.cpp  graphics_context.cpp  render_command.cpp  shader.cpp  texture.cpp  user_interface.cpp  vertex_layout.cpp
modules/renderer/src/gl/: blender.cpp  buffers.cpp  framebuffers.cpp  graphics_context.cpp  render_command.cpp  shader.cpp  texture.cpp  vertex_layout.cpp
modules/renderer/src/programs/: quad.cpp  texture.cpp  tinted_texture.cpp
modules/renderer/src/renderer_programs/: quad.cpp  texture.cpp  tinted_texture.cpp
modules/time/: CMakeLists.txt
modules/time/include/time/: timer.hpp
modules/time/src/: timer.cpp
modules/ui/: CMakeLists.txt
modules/ui/include/ui/: ui.hpp
modules/ui/src/: ui.cpp
modules/ui/src/gl/: ui.cpp
modules/universal_pch/: CMakeLists.txt
modules/universal_pch/include/universal_pch/: module_configs.hpp  std_headers.hpp
modules/universal_pch/src/: pch.hpp
modules/utilities/preliminary/: CMakeLists.txt
modules/utilities/preliminary/src/: pch.hpp
modules/window/: CMakeLists.txt
modules/window/include/window/: window.hpp
modules/window/src/linux/: window.cpp
modules/window/src/windows/: window.cpp
(+170 files in other folders)
