add_subdirectory(./base)
add_subdirectory(./logger)
add_subdirectory(./debug)

add_subdirectory(./asset_baker)
add_subdirectory(./asset_parser)
add_subdirectory(./asset_manager)

add_subdirectory(./camera)
add_subdirectory(./input)
add_subdirectory(./ui)

add_subdirectory(./renderer)
add_subdirectory(./ecs)
add_subdirectory(./engine)

add_subdirectory(./mirror)

