# engine
add_subdirectory(./base)
add_subdirectory(./time)
add_subdirectory(./logger)
add_subdirectory(./debug)

add_subdirectory(./asset_baker)
add_subdirectory(./asset_parser)
add_subdirectory(./asset_manager)

add_subdirectory(./camera)
add_subdirectory(./input)
add_subdirectory(./ui)

add_subdirectory(./window)
add_subdirectory(./renderer)
add_subdirectory(./ecs)

add_subdirectory(./app)

# apps 
add_subdirectory(./mirror)

